--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,26 +6,47 @@
     font-family: sans-serif;
 }
 
-.button {
+.primary-button {
     background-color: #5c33bd;
     border: none;
     color: white;
-    padding: 10px 20px;
+    padding: 10px 30px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-size: 19px;
     font-weight: bold;
-    margin: 4px 2px;
+    /* margin: 4px 2px; */
     cursor: pointer;
+    border: 1px solid #fff;
     border-radius: 5px;
     transition-duration: 500ms;
 }
 
-.button:hover {
+.primary-button:hover {
     background-color: #7848e8;
 }
 
+.secondary-button {
+    background-color: #f5eafe;
+    border: none;
+    color: #5c33bd;
+    padding: 10px 30px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 19px;
+    font-weight: bold;
+    /* margin: 4px 2px; */
+    cursor: pointer;
+    border: 1px solid #5c33bd;
+    border-radius: 5px;
+    transition-duration: 500ms;
+}
+
+.secondary-button:hover {
+    background-color: #fff;
+}
 
 .card {
     display: flex;
