--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,6 +6,11 @@
     font-family: sans-serif;
 }
 
+.container {
+    padding-left: 10%;
+    padding-right: 10%;
+}
+
 .primary-button {
     background-color: #5c33bd;
     border: none;
@@ -14,9 +19,8 @@
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 19px;
+    font-size: 16px;
     font-weight: bold;
-    /* margin: 4px 2px; */
     cursor: pointer;
     border: 1px solid #fff;
     border-radius: 5px;
@@ -35,9 +39,8 @@
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 19px;
+    font-size: 16px;
     font-weight: bold;
-    /* margin: 4px 2px; */
     cursor: pointer;
     border: 1px solid #5c33bd;
     border-radius: 5px;
