Readme file added

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -32,7 +32,7 @@
 }
 
 .secondary-button {
-    background-color: #f5eafe;
+    background-color: #f4ecfa;
     border: none;
     color: #5c33bd;
     padding: 10px 30px;
